--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -1,4 +1,13 @@
 .form {
-  font-family: "Special Elite", cursive;
+  font-family: "Exo 2", sans-serif;
   text-align: center;
+  font-size: 20px;
+  color: #ffffff;
+  margin-bottom: 50%;
+}
+h1 {
+  text-align: center;
+  font-family: "Exo 2", sans-serif;
+  margin-top: 19%;
+  color: #ffffff;
 }
