--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -1,8 +1,6 @@
-#mapid {
-  height: 300px;
-}
 .leaflet-container {
   margin-top: 20px;
   height: 300px;
-  width: 500px;
+  width: 60%;
+  border: 4px solid black;
 }
