--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,14 +1,3 @@
 .main {
-  height: 900px;
-  background-image: url(/images/Homepage.jpg);
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  background-position: center;
-}
-.image {
-  display: flex;
-  margin: 0 auto;
-  /* height: 20%; */
-  justify-content: center;
-  align-items: center;
+  background-color: blanchedalmond;
 }
