--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -1,5 +1,7 @@
 .leaflet-container {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-left: 40px;
   height: 300px;
   width: 60%;
   border: 4px solid black;
