--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 100%;
-  max-height: 900px;
+  /* max-width: 100%;
+  max-height: 900px; */
   background-color: blanchedalmond;
 }
