--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,3 +1,6 @@
 .main {
-  background-color: blanchedalmond;
+  background-image: url("/images/andreas-fidler.jpg");
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position-x: 950px;
 }
