--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,6 +1,6 @@
 .main {
   background-image: url("/images/andreas-fidler.jpg");
-  background-size: 38%;
+  background-size: 475px;
   background-position: right;
   background-repeat: no-repeat;
   /* background-position-x: 850px; */
